Add navbar & banner

--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
 </head>
-<body>
+<body class="raleway-font">
+    <header>
+        <nav class="Navbar-Section">
+        <img src="/docs/Assets/LOGO.png" alt="">
+        <input class="bgc-color" type="button" value="Sign Up">
+        </nav>
+        <div class="banner">
+            <h3 class="banner-title">Cool Dark UI Template for Webflow Agencies!</h3>
+            <input class="bgc-color banner-button" type="button" value="Stay Focused">
+
+        </div>
+
+    </header>
     
 </body>
 </html>
