--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
         </div>
 
     </header>
+    <main>
+        <section class="action-section">
+            <div class="action-1">
+                <h2 class="action-title">See It in Action</h2>
+                <p class="action-description">Explore the live preview and imagine your brand in this bold new look.</p>
+                <button class="action-button bgc-color" type="button">Launch Live Preview</button>
+            </div>
+            <div class="action">
+                <img class="action-img" src="/docs/Assets/wc-mini.png" alt="">
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
