add user Activity

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -18,8 +21,7 @@
         </nav>
         <div class="banner">
             <h3 class="banner-title">Cool Dark UI Template for Webflow Agencies!</h3>
-            <input class="bgc-color banner-button" type="button" value="Stay Focused">
-
+            <button class="bgc-color banner-button" type="button">Stay Focused</button>
         </div>
 
     </header>
@@ -27,12 +29,30 @@
         <section class="action-section">
             <div class="action-1">
                 <h2 class="action-title">See It in Action</h2>
-                <p class="action-description">Explore the live preview and imagine your brand in this bold new look.</p>
+                <p class="action-subtitle">Explore the live preview and imagine your brand in this bold new look.</p>
                 <button class="action-button bgc-color" type="button">Launch Live Preview</button>
             </div>
             <div class="action">
                 <img class="action-img" src="/docs/Assets/wc-mini.png" alt="">
             </div>
+        </section>
+        <section class="Productive-User-Section">
+            <h1 class="pusec-title">Joined Thousands of Productive Users</h1>
+        <div class="user-inter">
+            <div class="user-1">
+                <h1 class="user-count inter-user">50K</h1>
+                <p class="user-subtitle">Active Users</p>
+            </div>
+            <div class="user-2">
+                <h1 class="user-count inter-user">2M+</h1>
+                <p class="user-subtitle">Focus Sessions</p>
+            </div>
+            <div class="user-3">
+                <h1 class="user-count inter-user">95%</h1>
+                <p class="user-subtitle">Satisfaction Rate</p>
+            </div>
+        </div>
+
         </section>
     </main>
     
