--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="FIRST-TIME-EVER-DESIGN/style.css">
 
 </head>
 <body class="raleway-font">
@@ -33,7 +33,7 @@
                 <button class="action-button bgc-color button-3" type="button">Launch Live Preview</button>
             </div>
             <div class="action">
-                <img class="action-img" src="/design/Assets/wc-mini.png" alt="wc-mini.png">
+                <img class="action-img" src="/FIRST-TIME-EVER-DESIGN/Assets/wc-mini.png" alt="wc-mini.png">
             </div>
         </section>
         <section class="Productive-User-Section">
@@ -53,10 +53,18 @@
             </div>
         </div>
         </section>
+        <section>
+            <div class="focus-section">
+                <h2 class="focus-heading">Ready to focus better</h2>
+                <p class="focus-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="focus-button" type="button">Ger Started Free</button>
+
+            </div>
+        </section>
         <section class="touch-section">
             <h3 class="touch-title">Let’s Get in Touch</h3>
             <div class="contact-section inter-user">
-             <form action="action.php" class="action-form">
+             <form action="FIRST-TIME-EVER-DESIGN/action.php" class="action-form">
                 <label class="Form-sec" for="mail">Email</label>
                 <input class="Form-sec padding-range" placeholder="example@email.com" type="email" name="Address" id="mail">
                 <label class="Form-sec" for="identity">Name</label>
@@ -72,14 +80,14 @@
             <div class="Feedback-Section">
                
             <div class="Feedback-user">
-                <img src="/design/Assets/icon-star.png" alt="">
-                <img src="/design/Assets/icon-star.png" alt="">
-                <img src="/design/Assets/icon-star.png" alt="">
-                <img src="/design/Assets/icon-star.png" alt="">
-                <img src="/design/Assets/icon-star.png" alt="">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
                 <h4 class="fb-user-title">Loved by Designers</h4>
                 <div class="fb-user-subtitle">This template instantly leveled up our presence.” – Studio Vertex</div><div class="image-container">
-                <img src="/design/Assets/avatar.png" alt="">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/avatar.png" alt="avatar.png">
                  <div class="reviewer-section">
                  <small>Reviewer name</small>
                  <small id="Date">Date</small>
@@ -88,15 +96,15 @@
             </div>
             </div>
             <div class="Feedback-user">
-                <img src="/design/Assets/icon-star.png" alt="">
-                <img src="/design/Assets/icon-star.png" alt="">
-                <img src="/design/Assets/icon-star.png" alt="">
-                <img src="/design/Assets/icon-star.png" alt="">
-                <img src="/design/Assets/icon-star.png" alt="">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
                 <h4 class="fb-user-title">Loved by Designers</h4>
                 <div class="fb-user-subtitle">This template instantly leveled up our presence.” – Studio Vertex</div>
                 <div class="image-container">
-                <img src="/design/Assets/avatar.png" alt="">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/avatar.png" alt="avatar.png">
                  <div class="reviewer-section">
                  <small>Reviewer name</small>
                  <small id="Date">Date</small>
@@ -107,15 +115,15 @@
 
             </div>
             <div class="Feedback-user">
-                <img src="/design/Assets/icon-star.png" alt="">
-                <img src="/design/Assets/icon-star.png" alt="">
-                <img src="/design/Assets/icon-star.png" alt="">
-                <img src="/design/Assets/icon-star.png" alt="">
-                <img src="/design/Assets/icon-star.png" alt="">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/icon-star.png" alt="icon-star.png">
                 <h4 class="fb-user-title">Loved by Designers</h4>
                 <div class="fb-user-subtitle">This template instantly leveled up our presence.” – Studio Vertex</div>
                 <div class="image-container">
-                <img src="/design/Assets/avatar.png" alt="">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/avatar.png" alt="avatar.png">
                 <div class="reviewer-section">
                 <small>Reviewer name</small>
                 <small id="Date">Date</small>
