--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                 <p class="action-subtitle">Explore the live preview and imagine your brand in this bold new look.</p>
                 <button class="action-button bgc-color button-3" type="button">Launch Live Preview</button>
             </div>
-            <div class="action">
-                <img class="action-img" src="/FIRST-TIME-EVER-DESIGN/Assets/wc-mini.png" alt="wc-mini.png">
+            <div class="action-2">
+                <img src="/FIRST-TIME-EVER-DESIGN/Assets/wc-mini.png" alt="wc-mini.png">
             </div>
         </section>
         <section class="Productive-User-Section">
-            <h1 class="pusec-title">Joined Thousands of Productive Users</h1>
+            <h1 class="pusec-title raleway-font">Joined Thousands of Productive Users</h1>
             <div class="user-inter">
                 <div class="user-1">
                     <h1 class="user-count inter-user">50K</h1>
